parser/src/main/java/org/dst/parser/generated/DstNewSQLParser.java
// Generated from DstNewSQL.g4 by ANTLR 4.7

package org.dst.parser.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DstNewSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, NON_NEGATIVE_INT=24, 
		STRING=25, WS=26;
	public static final int
		RULE_statement = 0, RULE_conceptStatement = 1, RULE_strStatement = 2, 
		RULE_strPut = 3, RULE_strGet = 4, RULE_listStatement = 5, RULE_listPut = 6, 
		RULE_listLput = 7, RULE_listRput = 8, RULE_listGet = 9, RULE_listRGet = 10, 
		RULE_listDelete = 11, RULE_listMDelete = 12, RULE_listGetArguments = 13, 
		RULE_listGetAll = 14, RULE_listGetOne = 15, RULE_listGetRange = 16, RULE_listRemoveOne = 17, 
		RULE_listRemoveRange = 18, RULE_setStatement = 19, RULE_setPut = 20, RULE_setGet = 21, 
		RULE_setPutItem = 22, RULE_setRemoveItem = 23, RULE_setExists = 24, RULE_setDrop = 25, 
		RULE_dictStatement = 26, RULE_dictPut = 27, RULE_dictGet = 28, RULE_dictPutItem = 29, 
		RULE_dictGetItem = 30, RULE_dictPopItem = 31, RULE_dictRemoveItem = 32, 
		RULE_dictDrop = 33, RULE_keyValuePairs = 34, RULE_keyValuePair = 35, RULE_itemKey = 36, 
		RULE_itemValue = 37, RULE_key = 38, RULE_value = 39, RULE_valueArray = 40, 
		RULE_index = 41;
	public static final String[] ruleNames = {
		"statement", "conceptStatement", "strStatement", "strPut", "strGet", "listStatement", 
		"listPut", "listLput", "listRput", "listGet", "listRGet", "listDelete", 
		"listMDelete", "listGetArguments", "listGetAll", "listGetOne", "listGetRange", 
		"listRemoveOne", "listRemoveRange", "setStatement", "setPut", "setGet", 
		"setPutItem", "setRemoveItem", "setExists", "setDrop", "dictStatement", 
		"dictPut", "dictGet", "dictPutItem", "dictGetItem", "dictPopItem", "dictRemoveItem", 
		"dictDrop", "keyValuePairs", "keyValuePair", "itemKey", "itemValue", "key", 
		"value", "valueArray", "index"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'str.put'", "'str.get'", "'list.put'", "'list.lput'", "'list.rput'", 
		"'list.get'", "'list.rget'", "'list.remove'", "'list.mRemove'", "'set.put'", 
		"'set.get'", "'set.putItem'", "'set.remove'", "'set.removeItem'", "'set.exists'", 
		"'set.drop'", "'dict.put'", "'dict.get'", "'dict.putItem'", "'dict.getItem'", 
		"'dict.popItem'", "'dict.removeItem'", "'dict.drop'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"NON_NEGATIVE_INT", "STRING", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DstNewSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DstNewSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DstNewSQLParser.EOF, 0); }
		public ConceptStatementContext conceptStatement() {
			return getRuleContext(ConceptStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(84);
			conceptStatement();
			}
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConceptStatementContext extends ParserRuleContext {
		public StrStatementContext strStatement() {
			return getRuleContext(StrStatementContext.class,0);
		}
		public ListStatementContext listStatement() {
			return getRuleContext(ListStatementContext.class,0);
		}
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public DictStatementContext dictStatement() {
			return getRuleContext(DictStatementContext.class,0);
		}
		public ConceptStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conceptStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterConceptStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitConceptStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitConceptStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConceptStatementContext conceptStatement() throws RecognitionException {
		ConceptStatementContext _localctx = new ConceptStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_conceptStatement);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				strStatement();
				}
				break;
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				listStatement();
				}
				break;
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				setStatement();
				}
				break;
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				dictStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrStatementContext extends ParserRuleContext {
		public StrPutContext strPut() {
			return getRuleContext(StrPutContext.class,0);
		}
		public StrGetContext strGet() {
			return getRuleContext(StrGetContext.class,0);
		}
		public StrStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterStrStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitStrStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitStrStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrStatementContext strStatement() throws RecognitionException {
		StrStatementContext _localctx = new StrStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_strStatement);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				strPut();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				strGet();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrPutContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public StrPutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strPut; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterStrPut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitStrPut(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitStrPut(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrPutContext strPut() throws RecognitionException {
		StrPutContext _localctx = new StrPutContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_strPut);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__0);
			setState(98);
			key();
			setState(99);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrGetContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public StrGetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strGet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterStrGet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitStrGet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitStrGet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrGetContext strGet() throws RecognitionException {
		StrGetContext _localctx = new StrGetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_strGet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__1);
			setState(102);
			key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListStatementContext extends ParserRuleContext {
		public ListPutContext listPut() {
			return getRuleContext(ListPutContext.class,0);
		}
		public ListLputContext listLput() {
			return getRuleContext(ListLputContext.class,0);
		}
		public ListRputContext listRput() {
			return getRuleContext(ListRputContext.class,0);
		}
		public ListGetContext listGet() {
			return getRuleContext(ListGetContext.class,0);
		}
		public ListRGetContext listRGet() {
			return getRuleContext(ListRGetContext.class,0);
		}
		public ListDeleteContext listDelete() {
			return getRuleContext(ListDeleteContext.class,0);
		}
		public ListMDeleteContext listMDelete() {
			return getRuleContext(ListMDeleteContext.class,0);
		}
		public ListStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListStatementContext listStatement() throws RecognitionException {
		ListStatementContext _localctx = new ListStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listStatement);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				listPut();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				listLput();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(106);
				listRput();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				listGet();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(108);
				listRGet();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(109);
				listDelete();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 7);
				{
				setState(110);
				listMDelete();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListPutContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueArrayContext valueArray() {
			return getRuleContext(ValueArrayContext.class,0);
		}
		public ListPutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listPut; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListPut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListPut(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListPut(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListPutContext listPut() throws RecognitionException {
		ListPutContext _localctx = new ListPutContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listPut);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__2);
			setState(114);
			key();
			setState(115);
			valueArray();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListLputContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueArrayContext valueArray() {
			return getRuleContext(ValueArrayContext.class,0);
		}
		public ListLputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listLput; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListLput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListLput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListLput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListLputContext listLput() throws RecognitionException {
		ListLputContext _localctx = new ListLputContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listLput);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__3);
			setState(118);
			key();
			setState(119);
			valueArray();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListRputContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueArrayContext valueArray() {
			return getRuleContext(ValueArrayContext.class,0);
		}
		public ListRputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listRput; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListRput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListRput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListRput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListRputContext listRput() throws RecognitionException {
		ListRputContext _localctx = new ListRputContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listRput);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__4);
			setState(122);
			key();
			setState(123);
			valueArray();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListGetContext extends ParserRuleContext {
		public ListGetAllContext listGetAll() {
			return getRuleContext(ListGetAllContext.class,0);
		}
		public ListGetOneContext listGetOne() {
			return getRuleContext(ListGetOneContext.class,0);
		}
		public ListGetRangeContext listGetRange() {
			return getRuleContext(ListGetRangeContext.class,0);
		}
		public ListGetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listGet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListGet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListGet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListGet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListGetContext listGet() throws RecognitionException {
		ListGetContext _localctx = new ListGetContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listGet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__5);
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(126);
				listGetAll();
				}
				break;
			case 2:
				{
				setState(127);
				listGetOne();
				}
				break;
			case 3:
				{
				setState(128);
				listGetRange();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListRGetContext extends ParserRuleContext {
		public ListGetArgumentsContext listGetArguments() {
			return getRuleContext(ListGetArgumentsContext.class,0);
		}
		public ListRGetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listRGet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListRGet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListRGet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListRGet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListRGetContext listRGet() throws RecognitionException {
		ListRGetContext _localctx = new ListRGetContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_listRGet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__6);
			setState(132);
			listGetArguments();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListDeleteContext extends ParserRuleContext {
		public ListRemoveOneContext listRemoveOne() {
			return getRuleContext(ListRemoveOneContext.class,0);
		}
		public ListRemoveRangeContext listRemoveRange() {
			return getRuleContext(ListRemoveRangeContext.class,0);
		}
		public ListDeleteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listDelete; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListDelete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListDelete(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListDelete(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListDeleteContext listDelete() throws RecognitionException {
		ListDeleteContext _localctx = new ListDeleteContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_listDelete);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__7);
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(135);
				listRemoveOne();
				}
				break;
			case 2:
				{
				setState(136);
				listRemoveRange();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListMDeleteContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public List<IndexContext> index() {
			return getRuleContexts(IndexContext.class);
		}
		public IndexContext index(int i) {
			return getRuleContext(IndexContext.class,i);
		}
		public ListMDeleteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listMDelete; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListMDelete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListMDelete(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListMDelete(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListMDeleteContext listMDelete() throws RecognitionException {
		ListMDeleteContext _localctx = new ListMDeleteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_listMDelete);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__8);
			setState(140);
			key();
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				index();
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NON_NEGATIVE_INT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListGetArgumentsContext extends ParserRuleContext {
		public ListGetAllContext listGetAll() {
			return getRuleContext(ListGetAllContext.class,0);
		}
		public ListGetOneContext listGetOne() {
			return getRuleContext(ListGetOneContext.class,0);
		}
		public ListGetRangeContext listGetRange() {
			return getRuleContext(ListGetRangeContext.class,0);
		}
		public ListGetArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listGetArguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListGetArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListGetArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListGetArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListGetArgumentsContext listGetArguments() throws RecognitionException {
		ListGetArgumentsContext _localctx = new ListGetArgumentsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_listGetArguments);
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				listGetAll();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				listGetOne();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				listGetRange();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListGetAllContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ListGetAllContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listGetAll; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).enterListGetAll(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DstNewSQLListener ) ((DstNewSQLListener)listener).exitListGetAll(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DstNewSQLVisitor ) return ((DstNewSQLVisitor<? extends T>)visitor).visitListGetAll(this);
			else return visitor.visitChildren(this);
		}
	}
